--- a/finalproject/build.gradle
+++ b/finalproject/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.32.2'
 }
 
 tasks.named('test') {
